# ai-sandbox

./: .gitignore  .pre-commit-config.yaml  README.md
.cursor/rules/: git.mdc
experiments/advanced-rag-vision-cohere/: .env.example  README.md  pyproject.toml
experiments/advanced-rag-vision-cohere/src/: main.py
experiments/advanced-rag-vision-cohere/src/rag_pipeline/: answer_generation.py  embedding_model.py  knowledge_document.py  query_disambiguation.py  query_retrieval.py  query_rewriting.py  vector_database.py
experiments/agent-get-weather-with-adk/: README.md  pyproject.toml
experiments/agent-get-weather-with-adk/weather_agent/: agent.py
experiments/computer-use-cua/: README.md  pyproject.toml
experiments/computer-use-cua/docs/: computer-use.md
experiments/computer-use-cua/src/: main.py
experiments/conceptformer/: README.md  pyproject.toml
experiments/conceptformer/src/: example.py  kg_utils.py  llms.txt  model.py
experiments/crawl-with-crawl4ai/: .gitignore  README.md  main.py  pyproject.toml
experiments/crawl-with-crawl4ai/src/: crawler.py  main.py
experiments/mistra-ocr/: .env.example  README.md
experiments/mistralai-ocr/: README.md  main.py  pyproject.toml
experiments/naive-rag-md-duckdb/: .env.example  README.md  pyproject.toml
experiments/naive-rag-md-duckdb/src/: prompt_template.txt
experiments/ocr-mistralai/: README.md
experiments/ocr-mistralai/src/: main.py
experiments/rag-md-duckdb/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
experiments/rag-md-duckdb/input/: test1.md
experiments/rag-md-duckdb/src/: main.py  prompt_template.txt
scripts/: setup_new_experiment.sh
