[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conceptformer"
version = "0.1.0"
description = "Simple implementation of ConceptFormer"
dependencies = [
    "numpy>=2.2.4",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.2",
]
